--- a/_site.yml
+++ b/_site.yml
@@ -1,9 +1,11 @@
 name: "my-website"
 output_dir: "docs"
 navbar:
-  title: "My Website"
+  title: "Mariana Rezende"
   left:
     - text: "Home"
       href: index.html
     - text: "About"
       href: about.html
+    - text: "Projects"
+      href: crash-course.html
